<resources>
    <string name="app_name">newPersistenceSQL</string>
    <string name="select_department">Select Department</string>
    <string name="add_a_new_employee">Add a new Employee</string>
    <string name="enter_employee_salary">Enter Employee Salary</string>
    <string name="view_employees">view Employees</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="employee_salary">Employee Salary</string>
    <string name="joining_date">Joining Date</string>
    <string name="employee_dept">Employee Dept.</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_id">Employee ID</string>

    <array name="departments">

        <item>Technical</item>
        <item>Marketing</item>
        <item>Human Resource</item>
        <item>Research</item>
        <item>Support</item>
        <item>Customer Service</item>
        <item>General Operations</item>

    </array>
</resources>
