<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/add_a_new_employee"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            ></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:paddingLeft="6dp"
            android:id="@+id/editTextName"
            android:hint="Enter the employee Name"
            android:textStyle="italic"
            ></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="6dp"
            android:text="@string/select_department"></TextView>

        <Spinner

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerDept"
            android:entries="@array/departments">

        </Spinner>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSalary"
            android:hint="@string/enter_employee_salary"
            android:inputType="number"
            android:digits="0123456789"></EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddEmployee"
            android:text="Add Employee"
            android:background="@android:color/darker_gray"
            >

        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvViewEmployee"
            android:padding= "16dp"
            android:text="@string/view_employees"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            ></TextView>
    </LinearLayout>

</RelativeLayout>